[package]
name = "jiyud"
version = "0.1.0"
authors = ["treyzania <treyzania@gmail.com>"]

[dependencies]
libjiyunet-dag = { path = "../dag" }
libjiyunet-db = { path = "../db" }
libjiyunet-dht = { path = "../dht" }
libjiyunet-validation = { path = "../validation" }
clap = "2.27.1"

[[bin]]
name = "jiyud"
path = "src/main.rs"
test = true
