[package]
name = "jiyud"
version = "0.1.0"
authors = ["treyzania <treyzania@gmail.com>"]

[dependencies]
jiyunet-core = { path = "../core" }
jiyunet-dag = { path = "../dag" }
jiyunet-db = { path = "../db" }
jiyunet-dht = { path = "../dht" }
jiyunet-validation = { path = "../validation" }
clap = "2.27.1"
ipfsapi = "0.1.7"

[[bin]]
name = "jiyud"
path = "src/main.rs"
test = true
