[package]
name = "jiyu-tools"
version = "0.1.0"
authors = ["treyzania <treyzania@gmail.com>"]

[dependencies]
jiyunet-core = { path = "../core" }
jiyunet-dag = { path = "../dag" }
clap = "2.27.1"
rand = "0.3"
time = "0.1"

[[bin]]
name = "jiyu-keygen"
path = "keygen.rs"

[[bin]]
name = "jiyu-mkart"
path = "mkart.rs"
